Galleries updates, fix home pager z-index

--- a/style.css
+++ b/style.css
@@ -316,8 +316,15 @@ a:hover {
 	right: 0px;
 }
 
-.cycle-pager { 
-    text-align: center; width: 100%; z-index: 500; position: absolute; bottom: 0px; overflow: hidden; background: url('images/pager-bg.png'); height: 20px;
+.cycle-pager {
+	width: 100%;
+	height: 20px;
+    text-align: center;
+	position: absolute;
+	z-index: 2000;
+	bottom: 0px;
+	overflow: hidden;
+	background: url('images/pager-bg.png');
 }
 .cycle-pager span { 
     font-family: arial; font-size: 50px; width: 16px; height: 16px; margin: 0px 3px;
